# GenomeClustering

./: .gitignore  CMakeLists.txt  Makefile  README.md  bench.sh  cacheExperiment.sh  stats.csv
code/: FastaIO.cpp  FastaIO.h  KMerLookup.cpp  KMerLookup.h  KMerString.cpp  KMerString.h  main.cpp
data_analysis/: README.md
data_analysis/res/: compare.csv  dkmer_muf_full.csv  kmer_muf_full.csv  length_muf_full.csv  length_muf_greedy.csv  length_muf_lru.csv  lkmer_muf_full.csv  muf_greed.csv  muf_lru.csv  muf_nogreed.csv
data_analysis/src/: __init__.py  main.py
data_analysis/src/kmerCoverage/: kmerCoverage.py
src/: FastaComparators.h  FastaIO.cpp  FastaIO.h  GreedyClustering.cpp  GreedyClustering.h  InputParser.cpp  InputParser.h  KMeans.cpp  KMeans.h  KMerHash.cpp  KMerHash.h  KMerLookup.h  KMerString.cpp  KMerString.h  Main.cpp  MufDifference.cpp  MufDifference.h  PrintUtils.cpp  PrintUtils.h  RecordWriter.cpp  RecordWriter.h  SimpleGreedyClustering.h  WindowsCompat.h  main.cpp
